--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@11ty/eleventy": "^1.0.0-canary",
     "dotenv": "^8.2.0",
-    "eleventy-plugin-shopify": "^0.0.3"
+    "eleventy-plugin-shopify": "^0.0.3",
+    "node-fetch": "^2.6.1"
   }
 }
