--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@11ty/eleventy": "^1.0.0-canary",
+    "@11ty/eleventy": "^1.0.0",
     "dotenv": "^8.2.0",
-    "eleventy-plugin-shopify": "^0.0.3"
+    "eleventy-plugin-shopify": "^0.0.4"
   }
 }
